# ChangeLog for dev-libs/clearsilver
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/clearsilver/ChangeLog,v 1.18 2005/11/28 13:20:49 mcummings Exp $

  28 Nov 2005; <mcumming@gentoo.org> clearsilver-0.10.1.ebuild,
  clearsilver-0.9.14-r1.ebuild, clearsilver-0.9.7.ebuild:
  Switched from perl-module to perl-app eclass

  03 Sep 2005; Michael Hanselmann <hansmi@gentoo.org>
  clearsilver-0.9.14-r1.ebuild:
  Stable on ppc.

  30 Aug 2005; Julien Allanos <dju@gentoo.org> clearsilver-0.9.7.ebuild,
  clearsilver-0.9.14-r1.ebuild, clearsilver-0.10.1.ebuild:
  Added fix for perllocal.pod, closes bug #104278.

  29 Aug 2005; Julien Allanos <dju@gentoo.org> clearsilver-0.9.7.ebuild,
  -clearsilver-0.9.14.ebuild, clearsilver-0.9.14-r1.ebuild:
  Removed 0.9.14. Marked 0.9.14-r1 stable for x86.
  Removed RESTRICT="no mirror" for 0.9.7 and 0.9.14-r1.

*clearsilver-0.10.1 (29 Aug 2005)

  29 Aug 2005; Julien Allanos <dju@gentoo.org>
  +files/clearsilver-0.10.1-fPIC.patch, +files/configure-python24.patch,
  metadata.xml, +clearsilver-0.10.1.ebuild:
  Bumping clearsilver-0.10.1. Removed RESTRICT="nomirror" for this release,
  as permitted by the licence. Added upstream contact to metadata.xml.

*clearsilver-0.9.14-r1 (04 Aug 2005)

  04 Aug 2005; Herbie Hopkins <herbs@gentoo.org>
  +files/clearsilver-0.9.14-fPIC.patch,
  files/clearsilver-0.9.14-python24.patch, +clearsilver-0.9.14-r1.ebuild:
  Add patch to compile shared objects with -fPIC, bug #98362. Altered python24
  patch to not hardcode lib and so be multilib-strict safe.

  02 Aug 2005; Renat Lumpau <rl03@gentoo.org>
  +files/clearsilver-0.9.7-python24.patch,
  +files/clearsilver-0.9.14-python24.patch, clearsilver-0.9.7.ebuild,
  clearsilver-0.9.14.ebuild:
  Fixes bug #98588, thanks to pythonhead

*clearsilver-0.9.14 (04 Jul 2005)

  04 Jul 2005; Julien Allanos <dju@gentoo.org> metadata.xml, +clearsilver-0.9.14.ebuild: