@@ -1,8 +1,8 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 5eaddc9a311333db8f9e98ec425c53bb ChangeLog 3095
-MD5 fdf4223ca485a7cb07bfb4f892564fe6 clearsilver-0.10.1.ebuild 1724
+MD5 33c07cc778b70fe67482144ac24f5d83 ChangeLog 3198
+MD5 deb7d1518ae59e88405df0b156cc4a53 clearsilver-0.10.1.ebuild 1721
 MD5 7f16986964706012fed064252af5ec8d clearsilver-0.9.14-r1.ebuild 1700
 MD5 3a93917e21121d1bb8cf9ac2fe4d958a clearsilver-0.9.7.ebuild 2061
 MD5 4c227dbc14edacb199c6a4df09c64fce files/0.9.7-python.patch 391
@@ -18,7 +18,7 @@ MD5 a9ab8b66105d9636c9a5be8d4d20ee18 metadata.xml 274
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.2 (GNU/Linux)
 
-iD8DBQFDiwQ6tG5z4I8BtQoRAnQzAJ94UILcGbOj1NNkOsRMzTT03JpL9QCfeN79
-DQPEnu8KJX44g8X/58dkebE=
-=hTEr
+iD8DBQFDxBjZCRZPokWLroQRAp3pAKCbosdVKKDK+svy+tYH57RTZJQb7gCfdjij
+JeRQTLSigyXdiCyrm8/hIuo=
+=vJtT
 -----END PGP SIGNATURE-----
